[metadata]
name = anormald
version = 0.0.1
description = An anormally detection library in Python.
long_description = file: README.md
url = https://www.example.com/
author = pyto86
author_email = pyto86.me@gmail.com
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: